# CheepCheep

./: README.md  cheepcheep.code-workspace  sdkconfig
main/: CMakeLists.txt  device_config.h  main.c
main/bsp/: fs.c  fs.h  gpio.c  sys.c
main/client/: client.c  msg.c  net.c  net.h  ota_dfu.c  ws.c  ws.h
main/config/: config.c  config.h  config_defaults.c  config_defaults.h  config_types.h
main/console/: console.c  console.h
main/device/: device_door.c  device_door.h  device_interlock.c  device_interlock.h  device_type_api.h  device_vending.c  device_vending.h
main/nvstate/: nvstate.c  nvstate.h
main/signal/: signal.c  signal.h
main/tags/: tags.c  tags.h
main/util/: log.c  log.h
main/wiegand/: wiegand.c  wiegand.h  wiegand_fmt.c  wiegand_fmt.h
